tests/miniJava/neg/004919_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , System.out.println java ) { return 0 ; } }
